--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="./sass/main.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
@@ -151,7 +151,7 @@
 
             <div data-aos="zoom-in-left" data-aos-easing="ease-in-back" data-aos-delay="300" data-aos-offset="0"
                 data-aos-duration="500">
-                <button className="btn btn-light">Hire Me</button>
+                <button>Hire Me</button>
             </div>
 
         </div>
@@ -189,21 +189,21 @@
         <div class="cards">
 
 
-            <div class="card1" data-aos="zoom-in-left" data-aos-easing="linear" data-aos-duration="800">
+            <div class="card" data-aos="zoom-in-left" data-aos-easing="linear" data-aos-duration="800">
                 <img src='./img/sev.jpg' />
                 <i class="fa fa-code"></i>
                 <h3>Front-end</h3>
             </div>
 
 
-            <div class="card2" data-aos="zoom-in-down" data-aos-easing="linear" data-aos-duration="800">
+            <div class="card" data-aos="zoom-in-down" data-aos-easing="linear" data-aos-duration="800">
                 <img src='./img/sev.jpg' />
                 <i class="fa fa-database ml-1"></i>
                 <h3>Database</h3>
             </div>
 
 
-            <div class="card3" data-aos="zoom-in-right" data-aos-easing="linear" data-aos-duration="800">
+            <div class="card" data-aos="zoom-in-right" data-aos-easing="linear" data-aos-duration="800">
                 <img src='./img/sev.jpg' />
                 <i class="fa fa-cogs"></i>
                 <h3>Back-end</h3>
